[package]
name = "archivemail_rs"
version = "0.1.0"
authors = ["Dionysis Grigoropoulos <dgrig@erethon.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maildir = "0.6.4"
clap = { version = "4.3.23", features = ["derive"] }
log = "0.4.20"
simple_logger = "4.2.0"
